<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="8dip"
    android:orientation="vertical">

    <TextView
        android:id="@+id/program_name"
        android:textSize="20pt"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/interval_name"
        android:textSize="15pt"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_program"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation = "vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation = "vertical">

            <TextView
                android:id="@+id/enter_program_name"
                android:textSize="12pt"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_name"
                />

            <EditText
                android:id="@+id/interval_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/enter_program_name"
                android:text="" />



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10pt">

            <Button
                android:id="@+id/btn_save_interval"
                android:layout_width="0dp"
                android:layout_height="40pt"
                android:layout_margin="2pt"
                android:layout_weight="0.33"
                android:text="@string/btn_save"/>

            <Button
                android:id="@+id/btn_clear_interval"
                android:layout_width="0dp"
                android:layout_height="40pt"
                android:layout_margin="2pt"
                android:layout_weight="0.33"
                android:text="@string/btn_clear" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>